--- a/general.css
+++ b/general.css
@@ -69,14 +69,14 @@ body {
 }
 
 .button {
-	display: inline-block;
+	display: block;
 	border-radius: 5px;
 	border: 0;
-	width: 150px;
-	height: 30px;
+	width: 125px;
+	height: 25px;
 	color: #fff;
-	font-size: 14pt;
-	margin: 10px;
+	font-size: 12pt;
+	margin: 5px;
 	font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", "Open Sans";
 	cursor: pointer;
 }
@@ -92,10 +92,16 @@ body {
 .button-cancel:hover {
     background: rgba(255, 0, 0, 0.6);
 }
+.button-yellow {
+    background: rgba(255, 204, 0, 0.4);
+}
+.button-yellow:hover {
+    background: rgba(255, 204, 0, 0.6);
+}
 
 #buttonbox {
 	position: relative;
-	top: 10px;
+	top: 0;
 	float: right;
 	z-index: 12;
 }
@@ -103,7 +109,7 @@ body {
 #userbox {
 	position: relative;
 	float: right;
-	width: 200px;
+	width: 250px;
 	z-index: 12;
 	margin: 0 10px;
 }
@@ -129,14 +135,14 @@ body {
 	line-height: 40px;
 	vertical-align: top;
 	color: #fff;
-	font-size: 12pt;
+	font-size: 16pt;
 	font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", "Open Sans";
 }
 
 #colorscore {
 	display: inline-block;
 	height: 60px;
-	width: 120px;
+	width: 170px;
 	line-height: 7px;
 	text-align: right;
 	margin-left: 20px;
@@ -192,6 +198,13 @@ body {
    html {
       -webkit-text-size-adjust: none;
    }
+   #field {
+		margin: 30px auto;
+	}
+
+   #panel {
+   		height: 70px;
+   }
 
    #drawKrown {
    		height: 50px;
@@ -204,14 +217,46 @@ body {
 		height: 50px;
 		line-height: 50px;
 		vertical-align: middle;
-		font-size: 16pt;
+		font-size: 12pt;
 	}
 
 	.button {
 		border-radius: 3px;
-		width: 100px;
-		height: 18px;
-		font-size: 8pt;
+		width: 85px;
+		height: 15px;
+		font-size: 7pt;
 		margin: 5px;
+	}
+
+	#userbox {
+		width: 150px;
+		margin: 0 5px;
+	}
+
+	#userbox #username {
+		height: 20px;
+		line-height: 20px;
+		font-size: 12pt;
+	}
+
+	#whitescore {
+		height: 20px;
+		width: 20px;
+		line-height: 20px;
+		font-size: 12pt;
+	}
+
+	#colorscore {
+		height: 30px;
+		width: 100px;
+		line-height: 6px;
+		margin: 1px;
+		margin-left: 10px;
+	}
+
+	.scoreblock {
+		width: 3px;
+		height: 3px;
+		margin: 1px;
 	}
 }
