--- a/general.css
+++ b/general.css
@@ -159,21 +159,39 @@ body {
 	position: relative;
 	display: inline-block;
 	float: left;
-	height: 100px;
-	line-height: 100px;
+	height: 80px;
+	line-height: 80px;
 	vertical-align: middle;
 	color: #fff;
-	font-size: 32pt;
+	font-size: 24pt;
 	font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", "Open Sans";
 }
 
 #drawKrown {
 	display: inline-block;
 	height: 100px;
-	width: 100px; 
+	width: 100px;
 	float: left;
-	margin: 10px 20px;
+	margin: 5px;
 	opacity: 0.7;
+}
+
+#king {
+	position: absolute;
+	top: 105px;
+	height: 20px;
+	width: 110px;
+	text-align: center;
+	font-size: 11pt;
+	font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", "Open Sans";
+	color: #fff;
+}
+
+#king_name {
+	color: #ffcc00;
+}
+#king_score {
+	font-size: 8pt;
 }
 
 .gameover {
@@ -194,25 +212,87 @@ body {
 	margin: 0;
 }
 
-@media screen and (max-width: 620px), screen and (max-height: 700px) {
-   html {
-      -webkit-text-size-adjust: none;
-   }
-   #field {
+#messagebox {
+	display: none;
+}
+#messagebox-content {
+	padding: 5px;
+	border: 1px solid #fff;
+	border-radius: 10px;
+}
+#ok_button, #cancel_button {
+	display: inline-block;
+}
+
+#messagebox-content #data {
+	text-align: center;
+	font-size: 14pt;
+	font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", "Open Sans";
+	color: #fff;
+	margin: 5px;
+	margin-bottom: 25px;
+}
+
+#messagebox-content input {
+	border: 1px solid #fff;
+	background: transparent;
+	margin-bottom: 25px;
+	padding: 2px;
+	font-size: 12pt;
+	color: #fff;
+	font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", "Open Sans";
+}
+
+.center-parent {
+	text-align: center;
+	height: 100%;
+}
+ 
+/* The ghost, nudged to maintain perfect centering */
+.center-parent:before {
+	  content: '';
+	  display: inline-block;
+	  height: 100%;
+	  vertical-align: middle;
+	  margin-right: -0.25em; /* Adjusts for spacing */
+}
+
+/* The element to be centered, can also be of any width and height */ 
+.centered {
+	  display: inline-block;
+	  vertical-align: middle;
+	  width: 300px;
+}
+
+@media screen and (max-width: 732px), screen and (max-height: 700px) {
+    html {
+    	-webkit-text-size-adjust: none;
+    }
+    #field {
 		margin: 30px auto;
 	}
 
-   #panel {
+    #panel {
    		height: 70px;
-   }
+    }
 
-   #drawKrown {
+    #drawKrown {
    		height: 50px;
    		width: 50px;
    		margin: 5px 10px;
-   }
+    }
 
-   #krowntext {
+    #king {
+		top: 55px;
+		height: 18px;
+		width: 70px;
+		font-size: 8pt;
+	}
+	#king_score {
+		font-size: 6pt;
+	}
+
+   	#krowntext {
 		float: left;
 		height: 50px;
 		line-height: 50px;
@@ -229,26 +309,26 @@ body {
 	}
 
 	#userbox {
-		width: 150px;
+		width: 130px;
 		margin: 0 5px;
 	}
 
 	#userbox #username {
 		height: 20px;
 		line-height: 20px;
-		font-size: 12pt;
+		font-size: 10pt;
 	}
 
 	#whitescore {
 		height: 20px;
 		width: 20px;
 		line-height: 20px;
-		font-size: 12pt;
+		font-size: 10pt;
 	}
 
 	#colorscore {
 		height: 30px;
-		width: 100px;
+		width: 85px;
 		line-height: 6px;
 		margin: 1px;
 		margin-left: 10px;
